Fix message stream in dark mode

--- a/axelor-front/src/views/form/widgets/mail-messages/avatar/avatar.module.scss
+++ b/axelor-front/src/views/form/widgets/mail-messages/avatar/avatar.module.scss
@@ -3,12 +3,15 @@
   height: 100%;
   width: 100%;
 }
+
 .user-img {
   border-radius: 50%;
+  padding: 0.25rem;
+  background-color: var(--bs-secondary-bg);
 }
 
 .avatar {
-  color: var(--bs-white);
+  color: var(--bs-body-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -18,8 +21,8 @@
 }
 
 .text {
-  color: var(--bs-black);
-  background-color: var(--bs-gray-200);
+  color: var(--bs-body-color);
+  background-color: var(--bs-secondary-bg);
   font-size: 0.75rem;
   font-weight: normal;
 }
