--- a/axelor-front/src/views/form/widgets/mail-messages/message/message-track.module.scss
+++ b/axelor-front/src/views/form/widgets/mail-messages/message/message-track.module.scss
@@ -1,7 +1,7 @@
 .track-field {
   font-size: 0.9rem;
   & span {
-    color: var(--bs-black);
+    color: var(--bs-secondary);
   }
   .empty-value {
     opacity: 0.6;
